--- a/styles/styles.css
+++ b/styles/styles.css
@@ -10,7 +10,7 @@ nav a {
 h1 {
     color: steelblue;
 }
-img {
+main img {
     width: 150px;
     height: auto;
     border: 1px solid steelblue;
@@ -18,5 +18,25 @@ img {
     box-shadow: 0 0 30px gray;
 }
 p {
-    padding: 10px;
+    padding: 0;
+}
+main {
+    max-width: 840px;
+}
+aside {
+    margin: 10px;
+    width: 400px;
+    border: 1px solid rgb(171, 188, 251);
+    padding: 15px;
+    background-color: aliceblue;
+    color: black;
+}
+aside img{
+    width: 200px;
+    height: auto;
+}
+footer {
+    margin-top: 15px;
+    border-top: 1px solid #000;
+    text-align: center;
 }
