--- a/styles/styles.css
+++ b/styles/styles.css
@@ -77,7 +77,7 @@ h2{
 
 .box{
     margin: 1rem;
-    padding: 1px solid rgba(0,0,0,.1);
+    border: 1px solid rgba(0,0,0,.1);
     padding: 1rem;
     background-color: lightcyan;
     color: darkslategray;
