--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -249,3 +249,113 @@ button:hover{
     width: 100%;
     margin-top: 15px;
 }
+
+
+.home{
+    position: relative;
+}   
+.home img{
+    display: block;
+    width: 100%;
+    height: auto;
+}
+.home h1{
+    position: absolute;
+    top: 20px;
+    left: 50%;
+    transform: translateX(-50%);
+    padding: 10px 20px;
+    border-radius: 5px;
+    white-space: nowrap; 
+    font-size: 2rem;
+    color: #fff;
+    text-shadow: 
+        -1px -1px 0 #000,  
+         1px -1px 0 #000,
+        -1px  1px 0 #000,
+         1px  1px 0 #000; 
+}
+.home article{
+    position: absolute;
+    bottom: 0px;
+    opacity: 0.87;
+}
+
+.home article p{
+    padding: 25px;
+    background-color: var(--accent1-color);
+}
+
+
+.newsletter {
+    text-align: center;
+    margin: 20px 0;
+}
+
+.newsletter form {
+    display: grid;
+    gap: 10px;
+    max-width: 400px;
+    margin: 0 auto;
+}
+
+.newsletter label {
+    text-align: left;
+}
+
+.newsletter input {
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+}
+
+.newsletter button {
+    background-color: var(--primary-color);
+    color: #fff;
+    border: none;
+    padding: 10px;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.newsletter button:hover {
+    background-color: var(--nav-hover-background-color);
+}
+
+.cta {
+    text-align: center;
+    margin: 20px 0;
+}
+
+.cta .btn {
+    background-color: var(--primary-color);
+    color: #fff;
+    padding: 10px 20px;
+    text-decoration: none;
+    border-radius: 5px;
+    display: inline-block;
+    font-size: 1.2rem;
+}
+
+.cta .btn:hover {
+    background-color: var(--nav-hover-background-color);
+}
+
+.info-grid {
+    display: grid;
+    gap: 20px;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    margin: 20px 0;
+}
+
+.grid-item {
+    text-align: center;
+    padding: 10px;
+    border: 1px solid var(--primary-color);
+    border-radius: 5px;
+}
+
+.grid-item img {
+    max-width: 100%;
+    border-bottom: 1px solid var(--primary-color);
+}
